tests/script_errors/tailing_gt/error.txt
Error: 
    1 | event >
      |       ^ Found the token `>` but expected one of `!=`, `%`, `&`, `)`, `*`, `+`, `,`, `-`, `.`, `.`, `/`, `:`, `;`, `<`, `<<`, `<=`, `=`, `==`, `=>`, `>`, `>=`, `>>`, `>>>`, `[`, `]`, `^`, `and`, `case`, `end`, `of`, `or`, `when`, `xor`, `}`
      |         NOTE: Did you mean to use `>`?